# s3mgr

./: Cargo.toml  README.md
src/: config.rs  main.rs  s3.rs
src/cmds/: cat.rs  config.rs  cp.rs  dl.rs  ls.rs  md.rs  mod.rs  mv.rs  rm.rs  up.rs
src/utils/: colors.rs  mod.rs  progress.rs  size.rs
