[package]
name = "s3mgr"
authors = ["D4n13l3k00@yandex.ru"]
description = "A command-line tool for interacting with S3-compatible storage"
license = "AGPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
rust-s3 = "0.35.1"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
dirs = "6.0.0"
indicatif = "0.17.11"
crossterm = "0.29.0"
futures = "0.3.31"
dialoguer = "0.11.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
strip = true
opt-level = "z"
codegen-units = 1
